--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea_House</title>
+    <link rel="shortcut icon" href="./images/banner.png" type="image/x-icon">
 
     <!-- tailwind and daisy UI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
@@ -39,7 +40,138 @@
 </head>
 
 <body>
+    <!-- Navigation -->
+    <nav>
+        <div class="navbar bg-base-100 bg-gray-300 py-4">
+            <div class="flex-1">
+                <a class="btn btn-ghost normal-case text-xl "> <img class="w-2/3" src="./images/cup.png" alt="">
+                </a>
+                <a class="btn btn-ghost normal-case text-xl ">Tea_House </a>
+            </div>
+            <div class="flex-none">
+                <div class="dropdown dropdown-end">
+                    <label tabindex="0" class="btn btn-ghost btn-circle">
+                        <div class="indicator">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                            </svg>
+                            <span class="badge badge-sm indicator-item">8</span>
+                        </div>
+                    </label>
+                    <div tabindex="0" class="mt-3 z-[1] card card-compact dropdown-content w-52 bg-base-100 shadow">
+                        <div class="card-body">
+                            <span class="font-bold text-lg">13 Items</span>
+                            <span class="text-info">Subtotal: $999</span>
+                            <div class="card-actions">
+                                <button class="btn btn-primary btn-block">View cart</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="dropdown dropdown-end">
+                    <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+                        <div class="w-10 rounded-full">
+                            <img src="./images/circles.png" />
+                        </div>
+                    </label>
+                    <ul tabindex="0"
+                        class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                        <li>
+                            <a class="justify-between">
+                                Profile
+                                <span class="badge">New</span>
+                            </a>
+                        </li>
+                        <li><a>Settings</a></li>
+                        <li><a>Logout</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
 
+    <!-- Banner -->
+    <header>
+        <div class="her w-10/12 m-auto">
+            <div class="hero-content gap-10 w-full flex-col lg:flex-row-reverse">
+                <div class="flex-1">
+                    <div>
+                        <img src="./images/banner.png" class="w-full rounded-lg" />
+                    </div>
+                    <div class="stats shadow absolute -mt-20 ml-4 lg:-mt-28 lg:ml-28">
+                        <div class="stat ">
+                            <div class="stat-figure text-secondary">
+                                <div class="stat-value">5.00</div>
+                                <div class="stat-desc">Trust Pilot Ratings</div>
+                            </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="yellow" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="orange" class="w-14 h-14 ">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-1">
+                    <h1 class="text-5xl font-bold">It's Good <br>
+                        Tea Time at <br> The Tea_House</h1>
+                    <p class="py-6 lg:mr-36">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your
+                        Taste
+                        Buds.
+                    </p>
+                    <button class="btn btn-primary">Explore More <i class="fa-solid fa-angles-right"
+                            style="color: #ffffff;"></i></button>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <!-- juice container -->
+        <section>
+            <div class="flex flex-col lg:flex-row gap-12 w-10/12 m-auto my-24 items-center">
+                <div class="flex-1 grid grid-cols-1 lg:grid-cols-2 gap-8">
+                    <div class="opacity-10 h-36	bg-gradient-to-r from-[#F00] to-[#FF8938] rounded-xl"> </div>
+                    <div class="row-span-2 bg-[#e6a6231a] rounded-xl px-8 py-12 flex justify-center items-center"> <img
+                            src="./images/fresh-1.png" alt="">
+                    </div>
+                    <div class="row-span-2 bg-[#5776391A] rounded-xl px-8 py-12 flex justify-center items-center"> <img
+                            src="./images/fresh-2.png" alt=""> </div>
+                    <div class="h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF] rounded-xl"> </div>
+
+                </div>
+                <div class="flex-1">
+                    <h2 class="text-[#1C1C1C] font-extrabold text-5xl font-manrope">Great Tea, Freshly
+                        Presented
+                    </h2>
+                    <p class="mt-5 mb-7 text-[#777] font-medium">The meaning of gong cha is chanese is to provide the
+                        best tea to
+                        emperor from
+                        all possessions .
+                        It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been
+                        deeply appreciated by its custoers because of good words of mouth and unique customized service
+                        orginated from Taiwan.</p>
+                    <h2 class=" text-[#1C1C1C] font-extrabold text-xl font-manrope">Unique Taste!</h2>
+                    <p class="text-[#777] font-medium lg:mr-56">A Unique and different style from other teapots gives a
+                        luxurious and minimalist impression</p>
+                    <h2 class="mt-5 text-[#1C1C1C] font-extrabold text-xl font-manrope">Premium Quality</h2>
+                    <p class="text-[#777] font-medium lg:mr-56">Premium Quality that makes tea more elegant and more
+                        durable when
+                        you use it.</p>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- client container -->
+        <section>
+
+
+        </section>
+
+    </main>
 </body>
 
 </html>
