--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
     <!-- Banner -->
     <header>
-        <div class="her w-10/12 m-auto">
-            <div class="hero-content gap-10 w-full flex-col lg:flex-row-reverse">
+        <div class=" w-10/12 m-auto">
+            <div class=" gap-10 w-full flex justify-between items-center flex-col lg:flex-row-reverse">
                 <div class="flex-1">
                     <div>
                         <img src="./images/banner.png" class="w-full rounded-lg" />
@@ -129,6 +129,11 @@
     </header>
 
     <main>
+        <!-- feature Container -->
+        <section>
+
+        </section>
+
         <!-- juice container -->
         <section>
             <div class="flex flex-col lg:flex-row gap-12 w-10/12 m-auto my-24 items-center">
@@ -168,10 +173,79 @@
         <!-- client container -->
         <section>
 
+            <div
+                class="max-w-screen-3xl w-10/12 m-auto mb-32 rounded-lg p-16 bg-gradient-to-r from-[#FF8938] to-[#f00]">
+                <div class="flex gap-x-48 justify-center items-center ">
+                    <div class=" text-white flex-1">
+                        <h2 class=" text-[#F4F4F4] font-manrope text-5xl font-extrabold">Meet Our Super Clients</h2>
+                        <p class=" text-[#F4F4F4] font-manrope font-medium my-7">There are many variations of passages
+                            of Lorem Ipsum available, but the majority have suffered alteration in some form, by
+                            injected humour, or randomised words which don't look even slightly believable. </p>
+                        <button class="btn btn-active text-[#FF8938] bg-white">Show All</button>
+
+                    </div>
+                    <div class="relative flex-1 ">
+                        <!-- 1st card -->
+                        <div class="relative z-10 flex-1 bg-white rounded-lg p-10 mb-10 opacity-30">
+                            <img class="absolute -mt-16 -ml-16  border-white border-4 bg-white rounded-full"
+                                src="./images/client.png" alt="">
+                            <p class="text-[#777] font-manrope ">We are providing the best and suitable home insurance
+                                services for
+                                the people who are
+                                interested
+                                to treatment</p>
+                            <h3 class=" text-[#1C1C1C] font-manrope text-xl font-bold mt-5 ">Ilham Yuda</h3>
+                            <p class="text-[#777] font-manrope">Businessman</p>
+                            <div class="flex justify-end"> <img src="./images/circles.png" alt="">
+                            </div>
+                        </div>
+                        <!-- 2nd card -->
+                        <div class="absolute z-20 flex-1 mr-40 bg-white rounded-lg p-10 mb-10 -ml-40 -mt-40">
+                            <div>
+                                <img class="absolute -mt-16 -ml-16  border-white border-4 bg-white rounded-full"
+                                    src="./images/client.png" alt="">
+                                <p class="text-[#777] font-manrope ">We are providing the best and suitable home
+                                    insurance
+                                    services for
+                                    the people who are
+                                    interested
+                                    to treatment</p>
+                                <h3 class=" text-[#1C1C1C] font-manrope text-xl font-bold mt-5 ">Ilham Yuda</h3>
+                                <p class="text-[#777] font-manrope">Businessman</p>
+                                <div class="flex justify-end"> <img src="./images/circles.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- 3rd card -->
+                        <div class=" relative z-10 flex-1 bg-white rounded-lg p-10 opacity-30">
+                            <img class="absolute -mt-16 -ml-16  border-white border-4 bg-white rounded-full"
+                                src="./images/client.png" alt="">
+                            <p class="text-[#777] font-manrope ">We are providing the best and suitable home insurance
+                                services for
+                                the people who are
+                                interested
+                                to treatment</p>
+                            <h3 class=" text-[#1C1C1C] font-manrope text-xl font-bold mt-5 ">Ilham Yuda</h3>
+                            <p class="text-[#777] font-manrope">Businessman</p>
+                            <div class="flex justify-end"> <img src="./images/circles.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- News & Event container -->
+        <section>
 
         </section>
 
     </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
