after news segment at 4.33am

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <!-- Navigation -->
     <nav>
-        <div class="navbar bg-base-100 bg-gray-300 py-4">
+        <div class="navbar bg-base-100 bg-gradient-to-r from-orange-400 to-green-400  py-4">
             <div class="flex-1">
                 <a class="btn btn-ghost normal-case text-xl "> <img class="w-2/3" src="./images/cup.png" alt="">
                 </a>
@@ -121,8 +121,10 @@
                         Taste
                         Buds.
                     </p>
-                    <button class="btn btn-primary">Explore More <i class="fa-solid fa-angles-right"
-                            style="color: #ffffff;"></i></button>
+                    <button
+                        class="btn btn-primary text-white font-bold border-0 bg-gradient-to-r from-orange-600 to-red-600">Explore
+                        More
+                        <i class="fa-solid fa-angles-right" style="color: #ffffff;"></i></button>
                 </div>
             </div>
         </div>
@@ -131,6 +133,61 @@
     <main>
         <!-- feature Container -->
         <section>
+            <div class="max-w-screen-3xl w-10/12 m-auto mt-32 font-manrope">
+                <div>
+                    <h1 class="text-[#1C1C1C] text-center font-extrabold text-5xl">Our Featured Products</h1>
+                    <p class="text-[#777] text-center font-medium w-3/4 m-auto pt-5 pb-14">There are many variations of
+                        passages of
+                        Lorem
+                        Ipsum
+                        available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable. </p>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                    <!-- 1st tea -->
+                    <div class="card bg-[#F4F4F4] ">
+                        <figure class="px-10 pt-10">
+                            <img src="./images/tea-1.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title text-[#1C1C1C] text-2xl font-extrabold">Milk Tea</h2>
+                            <p class=" text-[#777] font-semibold">Creamer could be replaced by fresh milk</p>
+                        </div>
+                    </div>
+                    <!-- 2nd tea -->
+                    <div class="card bg-[#F4F4F4] ">
+                        <figure class="px-10 pt-10">
+                            <img src="./images/tea-2.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title text-[#1C1C1C] text-2xl font-extrabold">Black Tea</h2>
+                            <p class=" text-[#777] font-semibold">Creamer could be replaced by fresh milk</p>
+                        </div>
+                    </div>
+                    <!-- 3rd tea -->
+                    <div class="card bg-[#F4F4F4] ">
+                        <figure class="px-10 pt-10">
+                            <img src="./images/tea-3.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title text-[#1C1C1C] text-2xl font-extrabold">Bubble Tea</h2>
+                            <p class=" text-[#777] font-semibold">Creamer could be replaced by fresh milk</p>
+                        </div>
+                    </div>
+                    <!-- 4th tea -->
+                    <div class="card bg-[#F4F4F4] ">
+                        <figure class="px-10 pt-10">
+                            <img src="./images/tea-4.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title text-[#1C1C1C] text-2xl font-extrabold">Green Tea</h2>
+                            <p class=" text-[#777] font-semibold">Creamer could be replaced by fresh milk</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
 
         </section>
 
@@ -238,6 +295,67 @@
 
         <!-- News & Event container -->
         <section>
+            <div class="max-w-screen-3xl w-10/12 m-auto mt-32 font-manrope mb-32">
+                <div>
+                    <h1 class="text-[#1C1C1C] text-center font-extrabold text-5xl">News & Events</h1>
+                    <p class="text-[#777] text-center font-medium w-3/4 m-auto pt-5 pb-14">There are many variations of
+                        passages of
+                        Lorem
+                        Ipsum
+                        available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable. </p>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                    <!-- 1st tea -->
+                    <div class="card bg-[#fff] border-2 ">
+                        <figure class="px-6 pt-6">
+                            <img src="./images/news-2.png" alt="Shoes" class="rounded-xl w-full" />
+                        </figure>
+                        <div class="card-body text-left">
+                            <p class=" text-[#777] font-semibold">Feb 05, 2027</p>
+
+                            <h2 class="card-title text-[#1C1C1C] text-xl font-extrabold">Collecting 8 points for
+                                discount</h2>
+                            <p class=" text-[#777] font-medium">There are many variations of passages of Lorem Ipsum
+                                available.</p>
+                            <h2 class="card-title text-[#1C1C1C] font-bold">Learn More</h2>
+                        </div>
+                    </div>
+                    <!-- 2nd tea -->
+                    <div class="card bg-[#fff] border-2 ">
+                        <figure class="px-6 pt-6">
+                            <img src="./images/news-1.png" alt="Shoes" class="rounded-xl w-full" />
+                        </figure>
+                        <div class="card-body text-left">
+                            <p class=" text-[#777] font-semibold">Feb 05, 2027</p>
+
+                            <h2 class="card-title text-[#1C1C1C] text-xl font-extrabold">Collecting 8 points for
+                                discount</h2>
+                            <p class=" text-[#777] font-medium">There are many variations of passages of Lorem Ipsum
+                                available.</p>
+                            <h2 class="card-title text-[#1C1C1C] font-bold">Learn More</h2>
+                        </div>
+                    </div>
+                    <!-- 3rd tea -->
+                    <div class="card bg-[#fff] border-2 ">
+                        <figure class="px-6 pt-6">
+                            <img src="./images/news-3.png" alt="Shoes" class="rounded-xl w-full" />
+                        </figure>
+                        <div class="card-body text-left">
+                            <p class=" text-[#777] font-semibold">Feb 05, 2027</p>
+
+                            <h2 class="card-title text-[#1C1C1C] text-xl font-extrabold">Collecting 8 points for
+                                discount</h2>
+                            <p class=" text-[#777] font-medium">There are many variations of passages of Lorem Ipsum
+                                available.</p>
+                            <h2 class="card-title text-[#1C1C1C] font-bold">Learn More</h2>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
 
         </section>
 
